src/App.css
@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500;800&display=swap');

.App {
  text-align: center;
  font-family: 'Dosis', sans-serif;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #425458;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.stamp-container {
  display: grid;
  grid-template-columns: 1fr 1fr;

}

.clock-in, .clock-out {
  font-family: 'Dosis', sans-serif;
  font-size: 1.2em;
  height: 42px;
  width: 180px;
  outline: none;
  border: none;
  border-radius: 12px;
  margin: 20px;
}

.clock-in {
  background-color: rgb(185, 247, 220);
}

.clock-out {
  background-color: rgb(230, 173, 173);
}

.date, .time {
  margin: 3px;
  border-bottom: 1px solid transparent;
}

